# textab-cli

./: MANUAL.md  README.md  pyproject.toml
src/textab/: cli.py  client.py  compiler.py  config.py  errors.py  router.py
src/textab/commands/: auth.py  init_.py  push.py  status.py  sync.py  upload.py
tests/: conftest.py  test_client.py  test_compiler.py  test_config.py  test_router.py
